Now the problem is PermGen space. Specify (hopefully increase) that.
Java8 doesn't even have that option anymore, and will warn.
Since we're testing with Java7, I'll use it.
Did I mention that this cycle of [commit/wait for travis] is annoying?